# sona

./: .gitignore  Cargo.toml  GEMINI.md  keybindings.toml
src/: audio.rs  input.rs  main.rs  state.rs  ui.rs
src/ui/: about.rs  mod.rs  piano.rs  splash.rs  tracks.rs
