[package]
name = "sona"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.17.3"
cpal = "0.17.1"
futures-lite = "2.6.1"

clap = { version = "4.5.2", features = ["derive"] }
midly = "0.5.3"
oxisynth = "0.1.0"
rfd = "0.17.1"
serde = "1.0.228"
toml = "0.9.11"

[lints.rust]
unused_results = "warn"
